# study-map

./: .gitignore  .vercelignore  README.md  package.json  pnpm-lock.yaml  snowpack.config.js  tailwind.config.js  tsconfig.json  vercel.json
api/: Cargo.toml  _lib.rs  info.rs  list.rs  search.rs  text.rs
index-builder/: Cargo.toml
index-builder/bible/: Cargo.toml
index-builder/src/: bible.rs  error.rs  index.rs  lib.rs  read_bible.rs  readonly_dir_wrapper.rs  search.rs  search_bin.rs  stats.rs
public/: index.html
src/: App.svelte  BookNode.svelte  BookOverview.svelte  BookRangeText.svelte  FadeRoute.svelte  Main.svelte  NodeChildren.svelte  Overview.svelte  chunks.ts  media-query.ts  resizeObserver.ts  result_tree.ts  types.ts
