[package]
name = "study-map-api"
version = "0.1.0"
authors = [ "Daniel Imfeld <daniel@imfeld.dev>" ]
edition = "2018"

[[bin]]
name = "list"
path = "/home/dimfeld/projects/study-map/api/list.rs"

[[bin]]
name = "search"
path = "/home/dimfeld/projects/study-map/api/search.rs"

[[bin]]
name = "text"
path = "/home/dimfeld/projects/study-map/api/text.rs"

[lib]
name = "lib"
path = "_lib.rs"

[dependencies]
http = "0.2.2"
now_lambda = "0.1.3"
tantivy = "0.13.2"
anyhow = "1.0.36"
serde = "1.0.118"
serde_json = "1.0.60"
serde_qs = "0.8.2"
thiserror = "1.0.23"

  [dependencies.study_map_index]
  path = "../index-builder"
