[package]
name = "study_map_index"
version = "0.1.0"
authors = ["Daniel Imfeld <daniel@imfeld.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "search"
path = "src/search_bin.rs"

[[bin]]
name = "index-bible"
path = "src/bible.rs"

#[[bin]]
#name = "index-book"
#path = "src/book.rs"

[lib]
path = "src/lib.rs"
name = "study_map_index"

[dependencies]
anyhow = "1.0.36"
quick-xml = "0.20.0"
serde = "1.0.118"
serde_json = "1.0.60"
structopt = "0.3.21"
tantivy = "0.13.2"
thiserror = "1.0.23"
